# Nexus_AI---Personal-AI-Researcher

./: .gitignore  License  NEXUS_PROJECT_STATUS.md  README.md  ai_backend.txt  pyproject.toml  run_all.py  run_ingestion.py  test_bulk_verify.py  test_groq.py  test_llm.py  verify_setup.py
frontend/: app.py
src/: main.py
src/api/: llm.py  server.py
src/core/: config.py
src/ingestion/: dispatcher.py  schemas.py
src/ingestion/parsers/: archive_parser.py  image_parser.py  media_parser.py  office_parser.py  pdf_parser.py  tabular_parser.py  text_parser.py
src/memory/: database.py  embedder.py  manager.py  models.py
tests/ingestion/: test_dispatcher.py  test_schemas.py
tests/memory/: test_memory.py
