[project]
name = "nexus-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py[cv]>=1.0.9",
    "moviepy>=1.0.3",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.4.1",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
