[project]
name = "nexus-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "camelot-py[cv]>=1.0.9",
    "fastapi>=0.136.1",
    "moviepy>=1.0.3",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "openai>=1.14.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.58.0",
    "requests>=2.33.1",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
